--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - Assets/icons/
     - Assets/Images/jewellery.png
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/icons/
+
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
