--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,11 @@ dependencies:
   
   
   flutter_svg: ^0.19.0
-
-
+  cloud_firestore: ^0.14.1+3
+  firebase_core: ^0.5.0+1
+  firebase_storage: ^4.0.1
+  shared_preferences: ^0.5.12+2
+  toast: ^0.1.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
