--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  form_field_validator: ^1.0.1
+
   
   flutter_svg: ^0.19.0
   cloud_firestore: ^0.14.1+3
@@ -35,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   titled_navigation_bar: ^4.1.0
+  firebase_auth: ^0.18.3
 
 dev_dependencies:
   flutter_test:
