--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
   uses-material-design: true
   assets:
     - Assets/icons/
+    - Assets/icons/Traditional Clothes.png
   # To add assets to your application, add an assets section, like this:
 
     
