--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   form_field_validator: ^1.0.1
 
-  
+  flutter_carousel_slider: ^1.0.1
   flutter_svg: ^0.19.0
   cloud_firestore: ^0.14.1+3
   firebase_core: ^0.5.0+1
