--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   titled_navigation_bar: ^4.1.0
   firebase_auth: ^0.18.3
+  flutter_launcher_icons: "^0.8.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "Assets/icons/app_logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
